--- a/BookingApp_A12_2025_2026/Views/Shared/_Layout.cshtml
+++ b/BookingApp_A12_2025_2026/Views/Shared/_Layout.cshtml
@@ -54,6 +54,11 @@
                             <a class="nav-link text-dark" asp-area=""
                                asp-controller="Hotel" asp-action="LoginHotel">Login</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""
+                               asp-controller="Client" asp-action="LoginClient">Login Client</a>
+                        </li>
                     </ul>
                 </div>
             </div>
