Client Login view design

--- a/BookingApp_A12_2025_2026/Views/Client/LoginClient.cshtml
+++ b/BookingApp_A12_2025_2026/Views/Client/LoginClient.cshtml
@@ -1,6 +1,5 @@
 ﻿@model BookingApp_A12_2025_2026.Models.Client
 @{
-    Layout = null;
 }
 @{
     ViewData["Title"] = "تسجيل دخول العميل";
@@ -118,8 +117,8 @@
 </head>
 <body>
 
-    <div class="container-fluid login-container p-0">
-        <div class="row g-0">
+    <div class="container-fluid login-container p-0" >
+        <div class="row g-0 align-content-center">
 
             <div class="col-md-6 branding-half">
                 <i class="fas fa-user-shield icon"></i>
@@ -128,7 +127,7 @@
 
             </div>
 
-            <div classS="col-md-6 form-half">
+            <div class="col-md-6 form-half">
                 <div class="form-container">
 
                     <h2>تسجيل الدخول</h2>
