--- a/BookingApp_A12_2025_2026/Views/HotelAdmin/EditHotel.cshtml
+++ b/BookingApp_A12_2025_2026/Views/HotelAdmin/EditHotel.cshtml
@@ -63,7 +63,7 @@
 
             <div class="col-md-6">
                 <label asp-for="Hotel_Password" class="form-label"></label>
-                <input asp-for="Hotel_Password" type="password" class="form-control" />
+                <input asp-for="Hotel_Password" type="password" class="form-control" required/>
             </div>
 
 
