--- a/BookingApp_A12_2025_2026/Views/Shared/_Layout.cshtml
+++ b/BookingApp_A12_2025_2026/Views/Shared/_Layout.cshtml
@@ -59,6 +59,11 @@
                             <a class="nav-link text-dark" asp-area=""
                                asp-controller="Client" asp-action="LoginClient">Login Client</a>
                         </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area=""
+                               asp-controller="Home" asp-action="LoginView">Login</a>
+                        </li>
                     </ul>
                 </div>
             </div>
