--- a/BookingApp_A12_2025_2026/Views/Shared/_AdminLayout.cshtml
+++ b/BookingApp_A12_2025_2026/Views/Shared/_AdminLayout.cshtml
@@ -264,7 +264,7 @@
                 <a href="ManageCities" class="nav-item">
                     <i class="fas fa-bed"></i> إدارة المدن
                 </a>
-                <a href="#" class="nav-item">
+                <a href="ManageHotels" class="nav-item">
                     <i class="fas fa-calendar-check"></i> إدارة الفنادق
                 </a>
                 <a href="#" class="nav-item">
