--- a/BookingApp_A12_2025_2026/Views/Admin/CityDetails.cshtml
+++ b/BookingApp_A12_2025_2026/Views/Admin/CityDetails.cshtml
@@ -46,7 +46,7 @@
                         </div>
                     </div>
 
-                    <a href="/Home/ManageCities" class="btn btn-outline-primary mt-4">
+                    <a href="ManageCities" class="btn btn-outline-primary mt-4">
                         <i class="bi bi-arrow-left"></i> العودة إلى قائمة المدن
                     </a>
                 </div>
