Client SignUp and login to cp

--- a/BookingApp_A12_2025_2026/Views/Home/LoginView.cshtml
+++ b/BookingApp_A12_2025_2026/Views/Home/LoginView.cshtml
@@ -123,6 +123,12 @@
                 <i class="fas fa-user-shield icon"></i>
                 <h1>أهلاً بعودتك</h1>
                 <p>قم بتسجيل الدخول للوصول إلى لوحة التحكم الخاصة بك وإدارة جميع خدماتك بسهولة وأمان.</p>
+                <div class="text-center mt-4">
+                    <a href="/Home/SignUp" class="btn btn-primary btn-lg px-4 py-2" style="border-radius: 0.6rem;">
+                        <i class="fas fa-user-plus ms-2"></i>
+                        إنشاء حساب جديد
+                    </a>
+                </div>
 
             </div>
 
