--- a/BookingApp_A12_2025_2026/Views/Shared/_ClientAdminLayout.cshtml
+++ b/BookingApp_A12_2025_2026/Views/Shared/_ClientAdminLayout.cshtml
@@ -37,7 +37,7 @@
         /* 2. الشريط الجانبي (Sidebar) */
         .sidebar {
             width: 280px;
-            background-color: #4B5E4A; /* الأزرق البحري الداكن */
+            background-color: #8727F5; /* الأزرق البحري الداكن */
             color: #fff;
             padding: 20px 0;
             display: flex;
@@ -261,27 +261,21 @@
                 <a href="AdminCP" class="nav-item active">
                     <i class="fas fa-chart-line"></i> لوحة القيادة
                 </a>
+               
                 <a href="#" class="nav-item">
-                    <i class="fas fa-bed"></i> إدارة الغرف
+                    <i class="fas fa-calendar-check"></i> إدارة حجوزاتي
                 </a>
-                <a href="#" class="nav-item">
-                    <i class="fas fa-calendar-check"></i> إدارة الحجوزات
-                </a>
-                <a href="#" class="nav-item">
-                    <i class="fas fa-users"></i> النزلاء
-                </a>
-                <a href="#" class="nav-item">
-                    <i class="fas fa-file-alt"></i> التقارير
-                </a>
-                <a href="HotelAdmin/EditHotel" class="nav-item">
-                    <i class="fas fa-cog"></i> إعدادات الفندق
+               
+                
+                <a href="EditClient" class="nav-item">
+                    <i class="fas fa-cog"></i> إعدادات الحساب
                 </a>
             </nav>
 
             <div class="user-profile">
                 <div class="user-info">
                     <span>@c1.Client_Username</span>
-                    <small>مدير الفندق</small>
+                    <small>مدير حسابي</small>
                 </div>
                 <button class="logout-btn">
                     <i class="fas fa-sign-out-alt">
