titles for control panels

--- a/BookingApp_A12_2025_2026/Views/Home/SignUp.cshtml
+++ b/BookingApp_A12_2025_2026/Views/Home/SignUp.cshtml
@@ -102,7 +102,7 @@
                 </button>
 
                 <div class="text-center mt-3">
-                    <a href="/Client/Login" class="text-decoration-none">
+                    <a href="/Home/LoginView" class="text-decoration-none">
                         لديك حساب؟ <span class="text-primary">تسجيل الدخول</span>
                     </a>
                 </div>
