--- a/BookingApp_A12_2025_2026/Views/HotelAdmin/HotelCP.cshtml
+++ b/BookingApp_A12_2025_2026/Views/HotelAdmin/HotelCP.cshtml
@@ -5,7 +5,7 @@
 }
 
 <header class="top-header">
-    <h1>لوحة القيادة</h1>
+    <h1>لوحة التحكم للفندق</h1>
     <div class="header-actions">
         <i class="fas fa-bell action-icon"></i>
         <i class="fas fa-envelope action-icon"></i>
